--- a/web/package.json
+++ b/web/package.json
@@ -16,6 +16,8 @@
     "@fortawesome/vue-fontawesome": "^3.0.3",
     "axios": "^1.4.0",
     "element-plus": "^2.3.5",
+    "g": "^2.0.1",
+    "http-server": "^14.1.1",
     "vue": "^3.2.47",
     "vue-router": "^4.0.12",
     "vue3-video-play": "^1.3.1-beta.6",
