--- a/web/package.json
+++ b/web/package.json
@@ -9,23 +9,29 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "@element-plus/icons-vue": "^2.1.0",
+    "@element-plus/icons-vue": "^2.3.1",
     "@fortawesome/fontawesome-svg-core": "^6.4.0",
     "@fortawesome/free-regular-svg-icons": "^6.4.0",
     "@fortawesome/free-solid-svg-icons": "^6.4.0",
     "@fortawesome/vue-fontawesome": "^3.0.3",
+    "@vitejs/plugin-vue-jsx": "^3.1.0",
     "axios": "^1.4.0",
-    "element-plus": "^2.3.5",
+    "element-plus": "^2.6.2",
+    "element-plus-crx": "^1.1.3",
     "g": "^2.0.1",
     "http-server": "^14.1.1",
-    "vue": "^3.2.47",
+    "primeflex": "^3.3.1",
+    "primeicons": "^6.0.1",
+    "primevue": "^3.50.0",
+    "typescript": "^5.4.3",
+    "vue": "^3.4.21",
     "vue-router": "^4.0.12",
     "vue3-video-play": "^1.3.1-beta.6",
     "vuex": "^4.1.0"
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^4.1.0",
-    "vite": "^4.3.2",
+    "vite": "^4.5.0",
     "vite-plugin-vue-layouts": "^0.8.0"
   }
 }
