--- a/web/package.json
+++ b/web/package.json
@@ -25,6 +25,8 @@
     "primevue": "^3.50.0",
     "typescript": "^5.4.3",
     "vue": "^3.4.21",
+    "vue-json-pretty": "^2.4.0",
+    "vue-json-viewer": "^3.0.4",
     "vue-router": "^4.0.12",
     "vue3-video-play": "^1.3.1-beta.6",
     "vuex": "^4.1.0"
